--- a/views/main/index.html
+++ b/views/main/index.html
@@ -5,7 +5,8 @@
     <ul class="nav">
       <li data-foreach-lesson="currentArticle.lessons" data-addclass-active="lesson.active">
         <!-- <a data-bind="lesson.name" data-route="routes.lesson[lesson.id]"></a> -->
-        <a data-bind="lesson.name" data-click="currentArticle.viewLesson[lesson.id]"></a>
+        <!-- <a data-bind="lesson.name" data-click="currentArticle.viewLesson[lesson.id]"></a> -->
+        <a data-bind="lesson.name" data-route="routes.viewLesson[lesson]"></a>
         <!-- <a data-bind="lesson.name | append currentArticle.content" data-route="routes.articles[currentArticle.id].lessons[lesson.id]"></a> -->
       </li>
     </ul>
