Fixed home nav. Added dogs cause dogs rule.

--- a/views/lessons/first.html
+++ b/views/lessons/first.html
@@ -1,1 +1,3 @@
 <p>First lesson of article</p>
+
+<p><img src="http://www.petside.com/sites/default/files/imagecache/fullsize_slideshow_image/slideshows/corgi-cutest-dog-breed.jpg"></p>
