--- a/views/lessons/second.html
+++ b/views/lessons/second.html
@@ -1,1 +1,3 @@
 <p>Second article</p>
+
+<p><img src="http://www.happied.com/images/posts/1080/original_cute_puppies_racing_by_i_am_jessica-d4hn22r.jpg?1343317596"></p>
