--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1,7 +1,8 @@
 <h2>
-  <a data-route="routes.mains">Article View</a>
+  <a data-route="routes.home">Article View</a>
 </h2>
 
+<!-- TODO: Move to article/index to make intention appropriate -->
 <nav showif="currentArticle.lessons" class="navbar navbar-inverse">
   <div class="navbar-inner">
     <ul class="nav">
