--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1,1 +1,11 @@
+<nav class="toc">
+  <ul class="nav nav-list">
+    <li class="nav-header">Articles</li>
+    <li data-foreach-article="articles">
+      <a data-bind="article.id | prepend 'Aricle #'" data-bind-id="article.id" data-event-click="switchArticle"></a>
+    </li>
+  </ul>
+</nav>
+
+
 <h2><a data-route="routes.home" data-bind="currentArticle.title">Article View</a></h2>
