--- a/css/base.css
+++ b/css/base.css
@@ -8,7 +8,7 @@ h2 {
 
 .toc {
   position: fixed;
-  left: .5em;
-  top: .5em;
-  max-width: 20em;
+  left: 2em;
+  top: 2.3em;
+  min-width: 10em;
 }
