--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1,8 +1,8 @@
-<nav class="toc">
+<nav class="toc well">
   <ul class="nav nav-list">
     <li class="nav-header">Articles</li>
     <li data-foreach-article="articles">
-      <a data-bind="article.id | prepend 'Aricle #'" data-bind-id="article.id" data-event-click="switchArticle"></a>
+      <a data-bind="article.type | pluralize | humanize" data-bind-id="article.id" data-event-click="switchArticle"></a>
     </li>
   </ul>
 </nav>
