Updated models and views for added fun.

--- a/views/lessons/cat4.html
+++ b/views/lessons/cat4.html
@@ -1,1 +1,3 @@
-<p>Cat 4</p>
+<p>We shall put up with dogs until the day of reckoning. Then we shall unleash a furry fury the likes of which man- and dog-kind has never seen.</p>
+
+<p><img src="/img/gchd.jpg"></p>
