--- a/views/lessons/third.html
+++ b/views/lessons/third.html
@@ -1,3 +1,3 @@
-<p>Third article</p>
+<p>Third lesson</p>
 
 <p><img src="http://cache.gawker.com/assets/images/7/2006/12/cute%20pit%20bull.jpg"></p>
