--- a/views/articles/show.html
+++ b/views/articles/show.html
@@ -1,11 +1,15 @@
+<h2><a data-route="routes.articles[article]" data-bind="article.title">Article View</a></h2>
+<!-- <aside class="muted" data-bind="article.blurb" data-hideif="article.activeLesson"></aside> -->
+
 <nav showif="article.lessons" class="navbar navbar-inverse">
   <div class="navbar-inner">
     <ul class="nav">
       <li data-foreach-lesson="article.lessons" data-addclass-active="lesson.active">
-        <a data-bind="lesson.name" data-route="routes.articles[article].lessons[lesson]" data-hideif="lesson.id | not ''"></a>
+        <a data-bind="lesson.name" data-route="routes.articles[article].lessons[lesson]"></a>
       </li>
     </ul>
   </div>
 </nav>
 
-<aside data-bind="article.blurb" data-hideif="article.activeLesson"></aside>
+<article id="lesson" data-yield="lesson" class="container"></article>
+<!-- <article id="lesson" data-bind="activeLesson.source" class="container"></article> -->
