--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1,11 +1,3 @@
-<nav class="toc well">
-  <ul class="nav nav-list">
-    <li class="nav-header">Articles</li>
-    <li data-foreach-article="articles">
-      <a data-bind="article.type | pluralize | humanize" data-bind-id="article.id" data-event-click="switchArticle"></a>
-    </li>
-  </ul>
-</nav>
+<h1>Welcome. You do not belong here.</h1>
 
-
-<h2><a data-route="routes.home" data-bind="currentArticle.title">Article View</a></h2>
+<p>Please, pick an article from the list and leave immediately.</p>
